minor fix for colors of icons on mobile

--- a/selfservice-IT-aqua.css
+++ b/selfservice-IT-aqua.css
@@ -8569,7 +8569,7 @@ a:focus{
   border: none;
 }
 
-.mobile .mobile-navbar .item-content span{
+.mobile-navbar .item-content span{
   color: white;
 }
 
